# text-to-sql-workflow

./: .gitignore  pyproject.toml  workflows.db
src/text_to_sql_workflow/: main.py
src/text_to_sql_workflow/client/: __init__.py  client.py  utils.py
src/text_to_sql_workflow/workflow/: __init__.py  events.py  models.py  resources.py  workflow_class.py
ui/: next.config.ts  package-lock.json  package.json
ui/src/app/: page.tsx
ui/src/components/: base.tsx  handler-details.tsx
ui/src/lib/: clients.ts
